--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,10 @@ authors = [
 ]
 requires-python = ">=3.12"
 dependencies = [
+    "httpx>=0.23.0",
     "fastmcp>=2.3.4",
     "pydantic>=2.11.4",
+    "pydantic-settings>=2.0.0",
     "python-dotenv>=1.1.0",
 ]
 
