--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,11 +32,12 @@ jobs:
           python-version-file: "pyproject.toml"
 
       - name: Install the project
-        run: uv sync --locked --all-extras
+        run:
+          uv lock
+          uv sync --locked --all-extras
 
       - name: Build package
         run: |
-          uv lock
           uv build
 
       - name: Publish distribution 📦 to PyPI
