--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,7 +32,7 @@ jobs:
           python-version-file: "pyproject.toml"
 
       - name: Install the project
-        run:
+        run: |
           uv lock
           uv sync --locked --all-extras
 
