--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "huuh-mcp"
-version = "0.1.5"
+version = "0.1.6"
 description = "collaborative AI"
 readme = "README.md"
 authors = [
@@ -23,4 +23,4 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src"]
+packages = ["huuh_mcp"]
