--- a/smithery.yaml
+++ b/smithery.yaml
@@ -1,5 +1,7 @@
 # Smithery configuration file: https://smithery.ai/docs/build/project-config
-runtime: container
+build:
+  dockerfile: "smithery.Dockerfile"
+  dockerBuildPath: "."
 startCommand:
   type: http
   commandFunction:
