--- a/smithery.yaml
+++ b/smithery.yaml
@@ -4,25 +4,21 @@ build:
   dockerBuildPath: "."
 startCommand:
   type: http
-  commandFunction:
-    # A JS function that produces the CLI command based on the given config to start the MCP on stdio.
-    |-
-    (config) => ({ command: 'huuh-mcp', args: [], env: { HUUH_API_KEY: config.huuhApiKey, BACKEND_URL: config.backendUrl || 'https://api.huuh.me', LOG_LEVEL: config.logLevel || 'INFO' } })
   configSchema:
     # JSON Schema defining the configuration options for the MCP.
     type: object
     required:
-      - huuhApiKey
+      - HUUH_API_KEY
     properties:
-      huuhApiKey:
+      HUUH_API_KEY:
         type: string
         description: Your HUUH API key for authenticating with the huuh.me platform
-      logLevel:
+      LOG_LEVEL:
         type: string
         default: INFO
         description: Optional log verbosity level
     env:
-      backendUrl: "https://api.huuh.me"
+      BACKEND_URL: "https://api.huuh.me"
   exampleConfig:
-    huuhApiKey: abcdef123456
-    logLevel: DEBUG
+    HUUH_API_KEY: abcdef123456
+    LOG_LEVEL: DEBUG
