--- a/smithery.yaml
+++ b/smithery.yaml
@@ -1,6 +1,6 @@
 # Smithery configuration file: https://smithery.ai/docs/build/project-config
 startCommand:
-  type: http
+  type: stdio
   commandFunction:
     # A JS function that produces the CLI command based on the given config to start the MCP on stdio.
     |-
