--- a/smithery.yaml
+++ b/smithery.yaml
@@ -1,6 +1,14 @@
 # Smithery configuration file: https://smithery.ai/docs/build/project-config
+runtime: "container"
+env:
+  BACKEND_URL: "https://api.huuh.me"
+  FASTMCP_HOST: "0.0.0.0"
+  FASTMCP_DEBUG: "False"
+  FASTMCP_LOG_LEVEL: "INFO"
+  # FASTMCP_PORT will be picked up from the PORT environment variable set by Smithery
+  MCP_SERVER_TRANSPORT: "streamable-http"
 startCommand:
-  type: stdio
+  type: http
   commandFunction:
     # A JS function that produces the CLI command based on the given config to start the MCP on stdio.
     |-
@@ -14,8 +22,6 @@ startCommand:
       HUUH_API_KEY:
         type: string
         description: Your huuh API key for authenticating with the huuh.me platform
-    env:
-      BACKEND_URL: "https://api.huuh.me"
   exampleConfig:
     HUUH_API_KEY: abcdef123456
 build:
