--- a/smithery.yaml
+++ b/smithery.yaml
@@ -1,14 +1,7 @@
 # Smithery configuration file: https://smithery.ai/docs/build/project-config
 runtime: "container"
-env:
-  BACKEND_URL: "https://api.huuh.me"
-  FASTMCP_HOST: "0.0.0.0"
-  FASTMCP_DEBUG: "False"
-  FASTMCP_LOG_LEVEL: "INFO"
-  # FASTMCP_PORT will be picked up from the PORT environment variable set by Smithery
-  MCP_SERVER_TRANSPORT: "streamable-http"
 startCommand:
-  type: http
+  type: stdio
   commandFunction:
     # A JS function that produces the CLI command based on the given config to start the MCP on stdio.
     |-
