--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,13 +34,12 @@ jobs:
       - name: Bump minor version in pyproject.toml
         run: |
           uv version --bump patch
-          pip freeze > requirements.txt
 
       - name: Commit bumped version (optional)
         run: |
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
-          git add pyproject.toml requirements.txt
+          git add pyproject.toml
           git commit -m "Bump minor version"
           git push
 
