--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -52,5 +52,5 @@ jobs:
         run: |
           uv build
 
-      - name: Publish distribution 📦 to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
+#      - name: Publish distribution 📦 to PyPI
+#        uses: pypa/gh-action-pypi-publish@release/v1
