--- a/smithery.yaml
+++ b/smithery.yaml
@@ -1,5 +1,5 @@
 # Smithery configuration file: https://smithery.ai/docs/build/project-config
-runtime: "container"
+#runtime: "container"
 startCommand:
   type: stdio
   commandFunction:
