--- a/smithery.yaml
+++ b/smithery.yaml
@@ -5,8 +5,6 @@ startCommand:
     # A JS function that produces the CLI command based on the given config to start the MCP on stdio.
     |-
     (config) => ({ command: 'python', args: ['-m', 'huuh_mcp.server'], env: { HUUH_API_KEY: config.HUUH_API_KEY } })
-#    |-
-#    (config) => ({ command: 'huuh-mcp', args: [], env: { HUUH_API_KEY: config.HUUH_API_KEY } })
   configSchema:
     # JSON Schema defining the configuration options for the MCP.
     type: object
@@ -15,7 +13,7 @@ startCommand:
     properties:
       HUUH_API_KEY:
         type: string
-        description: Your huuh API key for authenticating with the huuh.me platform
+        description: Get it on https://app.huuh.me/settings
   exampleConfig:
     HUUH_API_KEY: abcdef123456
 build:
